# mercury-rust

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  log4rs.yml  rustfmt.toml
.cargo/: config
claims/: Cargo.toml
claims/src/: api.rs  claim_schema.rs  journal.rs  lib.rs  model.rs  repo.rs
claims/src/claim_schema/: defaults.rs  mod.rs
client_exampl/: Cargo.toml
client_exampl/src/: main (copy).rs  main.rs
common/: Cargo.toml  build.rs
common/protocol/: mercury.capnp
common/src/: lib.rs
connect/: Cargo.toml  log4rs.yml
connect/src/: client.rs  dummy.rs  error.rs  lib.rs  mock.rs  net.rs  profile.rs  protocol_capnp.rs  sdk.rs  sdk_impl.rs  service.rs  simple_profile_repo.rs  test.rs
connect/src/jsonrpc/: api.rs  client_proxy.rs  mod.rs  server_dispatcher.rs
connect/test/: echo_request.json  ping_request.json  samples.json
debian/: README  changelog  control  prometheus.install  rules
did/: Cargo.toml
did/src/: api.rs  lib.rs  model.rs  paths.rs  vault.rs
doc/: Architecture.md
doc/adr/: 0001-choosing-rust.md  0002-choosing-capnproto.md  0003-logging.md  0004-error-handling.md
etc/: client.id  client.id.pub  homenode.id  homenode.id.pub  server.id  server.id.pub
examples/TheButton/: Cargo.toml  README  log4rs.yml
examples/TheButton/logging/: log4rsdeb.yml  log4rsinf.yml  log4rsoff.yml  log4rswarn.yml
examples/TheButton/src/: application.rs  cli.rs  cli.yml  client.rs  client_config.rs  config.rs  function.rs  hardware_button.rs  init.rs  init_hack.rs  logging.rs  main.rs  mercury_wire.rs  options.rs  publisher.rs  server.rs  server_config.rs  signal_handling.rs  subscriber.rs  ui.rs
forgetfulfs/: Cargo.toml  README.md
forgetfulfs/src/: fs.rs  main.rs
forgetfulfuse/: Cargo.toml  README.md  forgetful.service
forgetfulfuse/src/: main.rs
forgetfulfuse/src/fs/: imp.rs  mod.rs
home-node/: Cargo.toml  home.cfg  log4rs.yml
home-node/src/: config.rs  crypto.rs  lib.rs  protocol_capnp.rs  server.rs
home-protocol/: Cargo.toml  build.rs
home-protocol/protocol/: mercury.capnp
home-protocol/src/: api.rs  crypto.rs  error.rs  future.rs  handshake.rs  lib.rs  mercury_capnp.rs  net.rs  primitives.rs  util.rs
home-protocol/src/mercury_capnp/: client_proxy.rs  mod.rs  server_dispatcher.rs
keyvault/: Cargo.toml  README.md
keyvault-wasm/: Cargo.toml  build.sh
keyvault-wasm/src/: lib.rs
keyvault/src/: bip32.rs  bip39.rs  cc.rs  lib.rs
keyvault/src/ed25519/: ext_sk.rs  id.rs  mod.rs  pk.rs  sig.rs  sk.rs
keyvault/src/multicipher/: id.rs  mod.rs  pk.rs  sig.rs  sk.rs
keyvault/src/secp256k1/: ext_pk.rs  ext_sk.rs  id.rs  mod.rs  pk.rs  sig.rs  sk.rs
keyvault/src/secp256k1/network/: ark.rs  btc.rs  hyd.rs  iop.rs  mod.rs
mercury-client-sdk/: Cargo.toml
mercury-client-sdk/src/: lib.rs  mock.rs  net.rs  protocol_capnp.rs  test.rs
mercury-common/: Cargo.toml
mercury-common/protocol/: mercury.capnp
mercury-common/src/: lib.rs  mercury_capnp.rs
mercury-profile-server/: Cargo.toml
mercury-profile-server/src/: lib.rs  main.rs  protocol_capnp.rs  server.rs
mercury-test/: Cargo.toml
mercury-test/src/: lib.rs
mercury-wasm/: Cargo.toml
mercury-wasm/src/: lib.rs
morpheus_keyvault/: Cargo.toml
morpheus_keyvault/src/: bip32.rs  bip39.rs  ed25519.rs  fingerprint.rs  lib.rs  mbase.rs  tests.rs  wrappers.rs
morpheus_keyvault/src/ed25519/: cc.rs  ext_sk.rs  id.rs  mod.rs  pk.rs  sig.rs  sk.rs
morpheus_keyvault/src/multicipher/: id.rs  mod.rs  pk.rs  sig.rs  sk.rs
morpheus_storage/: Cargo.toml
morpheus_storage/src/: client.rs  lib.rs  messages.rs  model.rs  store.rs
osg/: .gitignore  Cargo.toml  Cargo.toml.removed
osg-rpc-storage/: Cargo.toml
osg-rpc-storage/src/: client.rs  lib.rs  messages.rs  profile.rs  repo.rs  store.rs
osg/debian/: changelog
osg/osg/: Cargo.toml
osg/osg-rpc-storage/: Cargo.toml
osg/prometheus-cli/: Cargo.toml  (+1 more)
prometheus/: Cargo.toml  README.md  build.rs
prometheus-cli/: Cargo.toml
prometheus-cli/src/: cli.rs  main.rs  options.rs  seed.rs
prometheus-tester/: .gitignore  Cargo.toml  README.md  log4rs.yml
prometheus-tester/src/: main.rs  simul.rs  state.rs  sync.rs  vault.rs
prometheus/src/: api.rs  api_data.rs  daemon.rs  dapp_session.rs  data.rs  imp.rs  lib.rs  message_api.rs  messaging.rs  model.rs  options.rs  profile.rs  store.rs  types.rs  user_interactor.rs  vault.rs  vault_api.rs  vault_api_imp.rs  vault_imp.rs
prometheus/src/dapp/: dapp_session.rs  mod.rs  user_interactor.rs
prometheus/src/dapp/websocket/: client.rs  mod.rs  routes.rs  server.rs
prometheus/src/home/: connection.rs  discovery.rs  mod.rs  net.rs
prometheus/src/http/: client.rs  http_client_service.rs  mod.rs  server.rs
prometheus/src/http/server/: controller.rs  imp.rs  mapping.rs  mod.rs  routes.rs  status.rs
prometheus/src/names/: adjectives.rs  mod.rs  nouns.rs
prometheus/src/test/: mod.rs
prometheus/src/vault/: api.rs  api_data.rs  api_impl.rs  mod.rs
prometheus/src/vault/http/: client.rs
prometheus/src/vault/http/server/: controller.rs  routes.rs
prometheus/tests/: http.rs
prometheus/vocabulary/: nouns.txt
prometheusd/: Cargo.toml  README.md  build.rs
prometheusd/schemas/: age-over.schema.json
prometheusd/src/: daemon.rs  data.rs  http.rs  imp.rs  lib.rs  main.rs  options.rs
prometheusd/tests/: http.rs
prometheusd/vocabulary/: adjectives.txt
sdk/: Cargo.toml
server/: Cargo.toml
src/: async.rs  blockchain.rs  cli.rs  common.rs  error.rs  imp.rs  lib.rs  main.rs  meta.rs  sync.rs  types.rs  vault.rs
storage/: .gitlab-ci.yml  Cargo.toml
storage/doc/: Architecture.md
storage/src/: error.rs  lib.rs
storage/src/async/: fs.rs  imp.rs  mod.rs  router_service.rs
storage/src/asynch/: fs.rs  imp.rs  mod.rs  router_service.rs
storage/src/common/: imp.rs  mod.rs
storage/src/filesys/: mod.rs  sync.rs
storage/src/format/: mod.rs
storage/src/meta/: mod.rs
storage/src/sync/: imp.rs  mod.rs
test/: Cargo.toml  createdb.sh  testdb.sql
test/src/: connect.rs  dummy.rs  home.rs  lib.rs
wasm/: Cargo.toml  build.sh
wasm/src/: lib.rs
(+49 files in other folders)
