[workspace]
members = [
    "claims",
#    "connect",
    "did",
    "home-protocol",
    "home-node",
#    "forgetfulfuse", # causes compilation problems on Mac, still experimental
    "keyvault",
    "keyvault-wasm",
    "mercury-wasm",
    "prometheus",
    "prometheus-cli",
    "storage",
# TODO put this back after refactoring
#    "test",
    "examples/TheButton",
]
