[package]
name = "claims"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>"]
edition = "2018"

[dependencies]
bincode = "*"
did = { path="../did" }
dirs = "*"
failure = "*"
futures = "0.1"
log = "*"
keyvault = { path="../keyvault" }
rand = "0.5"
serde = "*"
serde_derive = "*"
serde_json = "*"
