[package]
name = "client"
version = "0.1.0"
authors = ["deusz <lovaszoltanr@gmail.com>"]

[dependencies]
mercury-sdk = { path = "../client-sdk-rust/mercury-client-sdk"}
mercury-common = { path = "../client-sdk-rust/mercury-common"}

multihash = "*"
multiaddr = {git = "https://github.com/multiformats/rust-multiaddr"}