[package]
name = "mercury-connect"
version = "0.1.0"
authors = ["Rache Bartmoss <bartmoss@tutanota.com>"]

[dependencies]
clap = {version = "*", features = ["yaml"]}
failure = "*"
futures = "0.1"
jsonrpc-core = { git = "https://github.com/Internet-of-People/jsonrpc" }
jsonrpc-pubsub = { git = "https://github.com/Internet-of-People/jsonrpc" }
log = "*"
log4rs = "*"
mercury-home-protocol = { path="../home-protocol" }
mercury-storage = { path="../storage" }
multiaddr = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
structopt = "*"
tokio-codec = "*"
tokio-core = "*"
tokio-io = "*"
tokio-uds = "0.1"
