[package]
name = "mercury-connect"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>"]
repository = "https://github.com/Internet-of-People/mercury-rust"
keywords = ["crypto", "wallet", "iop", "mercury", "morpheus", "prometheus", "vault", "key-vault"]
license = "LGPL-3.0+"
edition = "2018"

[dependencies]
clap = {version = "*", features = ["yaml"]}
failure = "*"
futures = "0.1"
jsonrpc-core = { git = "https://github.com/Internet-of-People/jsonrpc" }
jsonrpc-pubsub = { git = "https://github.com/Internet-of-People/jsonrpc" }
log = "*"
log4rs = "*"
mercury-home-protocol = { path="../home-protocol" }
mercury-storage = { path="../storage" }
multiaddr = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
state_machine_future = "*"
structopt = "*"
tokio-codec = "*"
tokio-core = "*"
tokio-io = "*"
tokio-uds = "0.1"
