[package]
name = "did"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>"]
edition = "2018"

[dependencies]
#bincode = "*"
dirs = "*"
failure = "*"
futures = "0.1"
log = "*"
keyvault = { path="../keyvault" }
serde = "*"
serde_bytes = "*"
serde_derive = "*"
serde_json = "*"
