[package]
name = "forgetfulfuse"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["wigy <wigy_opensource_developer@yahoo.com>"]
edition = "2018"

[badges]
gitlab = { repository = "https://gitlab.libertaria.community/iop-stack/communication/prometheus" }
github = { repository = "https://github.com/internet-of-people/prometheus" }
maintenance = { status = "actively-developed" }

[dependencies]
failure = "0.1.6"
fuse = "0.3.1"
fuse_mt = "0.4" # Leave it on 0.4 if you want to keep your sanity
libc = "0.2.65"
log = "0.4.8"
log4rs = "0.8.3"
structopt = "0.3.3"
time = "0.1.42"
timer = "0.2.0"
users = "0.9.1"
