[package]
name = "mercury-home-node"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>"]
repository = "https://github.com/Internet-of-People/mercury-rust"
keywords = ["crypto", "wallet", "iop", "mercury", "morpheus", "prometheus", "vault", "key-vault"]
license = "AGPL-3.0+"
edition = "2018"

[dependencies]
bincode = "*"
did = { path="../did" }
failure = "*"
futures = "0.1"
log = "*"
log4rs = "*"
mercury-home-protocol = { path="../home-protocol" }
osg-rpc-storage = { path="../osg-rpc-storage" }
multiaddr = "*"
structopt = "*"
tokio-core = "0.1"
tokio-io = "*"
toml = "*"
