[package]
name = "mercury-home-node"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>"]
repository = "https://github.com/Internet-of-People/mercury-rust"
keywords = ["crypto", "wallet", "iop", "mercury", "morpheus", "prometheus", "vault", "key-vault"]
license = "AGPL-3.0+"
edition = "2018"

[dependencies]
async-trait = "0.1.17"
bincode = "*"
claims = { path="../claims" }
did = { path="../did" }
failure = "*"
futures-preview = "0.3.0-alpha.19"
log = "*"
log4rs = "*"
mercury-home-protocol = { path="../home-protocol" }
mercury-storage = { path="../storage" }
multiaddr = "*"
structopt = "*"
tokio = { version="0.2.0-alpha.6", features=["rt-current-thread"] }
toml = "*"
