[package]
name = "mercury-home-node"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>"]
repository = "https://github.com/Internet-of-People/mercury-rust"
keywords = ["crypto", "wallet", "iop", "mercury", "morpheus", "prometheus", "vault", "key-vault"]
license = "AGPL-3.0+"
edition = "2018"

[dependencies]
bincode = "*"
claims = { path="../claims" }
did = { path="../did" }
failure = "*"
futures = "0.1"
log = "*"
log4rs = "*"
mercury-home-protocol = { path="../home-protocol" }
mercury-storage = { path="../storage" }
multiaddr = "*"
structopt = "*"
tokio = "1.8"
tokio-current-thread = "0.1"
toml = "*"
