[package]
name = "mercury-home-protocol"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>"]
repository = "https://github.com/Internet-of-People/mercury-rust"
keywords = ["crypto", "wallet", "iop", "mercury", "morpheus", "prometheus", "vault", "key-vault"]
license = "LGPL-3.0+"
edition = "2018"

[build-dependencies]
capnpc = "*"

[dependencies]
bincode = "*"
bytes = "*"
capnp = "*"
capnp-rpc = "*"
claims = { path="../claims" }
did = { path="../did" }
failure= "*"
futures = "0.1"
keyvault = { path="../keyvault" }
log = "*"
multiaddr = "*"
multibase = "*"
multihash = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
structopt = "*"
tokio-core = "0.1"
tokio-io = "0.1"
toml = "*"

#x25519-dalek = { version="*", default-features=false, features=["std"] }
