[package]
name = "mercury-home-protocol"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>"]
repository = "https://github.com/Internet-of-People/mercury-rust"
keywords = ["crypto", "wallet", "iop", "mercury", "morpheus", "prometheus", "vault", "key-vault"]
license = "LGPL-3.0+"
edition = "2018"

[build-dependencies]
capnpc = { git = "https://github.com/capnproto/capnproto-rust", rev = "35d71c1c4e80da43202edb15083348dd1804c3ab" }

[dependencies]
async-trait = "0.1.17"
bincode = "*"
bytes = "*"
capnp = { git = "https://github.com/capnproto/capnproto-rust", rev = "35d71c1c4e80da43202edb15083348dd1804c3ab" }
capnp-rpc = { git = "https://github.com/capnproto/capnproto-rust", rev = "35d71c1c4e80da43202edb15083348dd1804c3ab" }
claims = { path="../claims" }
did = { path="../did" }
failure= "*"
futures-preview = { version="0.3.0-alpha.19", features=["compat"] }
futures-tokio-compat = { git = "https://github.com/Nemo157/futures-tokio-compat", branch = "master" }
keyvault = { path="../keyvault" }
log = "*"
multiaddr = "*"
multibase = "*"
multihash = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
structopt = "*"
tokio = { version="0.2.0-alpha.6", features=["rt-current-thread"] }
toml = "*"

#x25519-dalek = { version="*", default-features=false, features=["std"] }
