[package]
name = "keyvault-wasm"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
failure = "*"
log = "*"
keyvault = { path="../keyvault" }
serde_json = "*"
wasm-bindgen = { version = "*", features = ["serde-serialize"] }
