[package]
name = "keyvault"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/internet-of-people/prometheus"
keywords = ["crypto", "wallet", "iop", "mercury", "morpheus", "prometheus", "vault", "key-vault"]
edition = "2018"

[dependencies]
base-x = "0.2"
blake2 = "0.8.0"
digest = "0.8.0"
ed25519-dalek = "1.0.0-pre.1"
failure = "0.1.5"
hex = "0.3.2"
hmac = "0.7.0"
# Unfortunately the crate name of the libsecp256k1 collides with the perfect module name
# for the cipher, so we rename the dependency here:
secp = { version = "0.2.2", package = "libsecp256k1" }
log = "0.4.6"
multibase = "0.6.0"
ripemd160 = "0.8.0"
serde = { version = "1.0.87", features = ["derive"] }
serde_bytes = "0.10.4"
sha2 = "0.8.0"
tiny-bip39 = { version = "0.6.1", default-features = false }

[dev-dependencies]
rmp-serde = "*"
serde_json = "*"