[package]
name = "mercury-sdk"
version = "0.1.0"
authors = ["Rache Bartmoss <bartmoss@tutanota.com>"]

[dependencies]
capnp = "0.8"
capnp-rpc = "0.8"
futures = "0.1"
mercury-common = { path="../mercury-common" }
multiaddr = "*"
multihash = "*"
tokio-core = "0.1"
tokio-stdin-stdout = "0.1.1"
tokio-io = "*"
