[package]
name = "mercury-wasm"
version = "0.1.0"
authors = ["Rache Bartmoss <bartmoss@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
did = { path = "../did" }
keyvault = { path="../keyvault" }
keyvault-wasm = { path = "../keyvault-wasm" }
serde_json = "*"
wasm-bindgen = { version = "*", features = ["serde-serialize"] }