[package]
name = "morpheus_keyvault"
version = "0.1.0"
authors = ["wigy <wigy_opensource_developer@yahoo.com>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/internet-of-people/keyvault-rust"
keywords = ["crypto", "wallet", "iop", "mercury", "morpheus", "prometheus"]
edition = "2018"

[dependencies]
bip39 = { git = "https://github.com/Internet-of-People/bip39-rs", branch = "master", default-features = false }
digest = "0.8.0"
failure = "0.1.5"
hex = "0.3.2"
hmac = "0.7.0"
sha2 = "0.8.0"
log = "0.4.6"
multibase = "0.6.0"
ed25519-dalek = { version = "1.0.0-pre.1", default-features = false, features = ["u64_backend"] }
curve25519-dalek = "1.0.3"

# [dev-dependencies]
# hex-literal = "0.1.2"
