[package]
name = "morpheus_keyvault"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "wigy <wigy_opensource_developer@yahoo.com>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/internet-of-people/prometheus"
keywords = ["crypto", "wallet", "iop", "mercury", "morpheus", "prometheus", "vault", "key-vault"]
edition = "2018"

[dependencies]
bip39 = { git = "https://github.com/Internet-of-People/bip39-rs", branch = "master", default-features = false }
blake2 = "0.8.0"
ed25519-dalek = "1.0.0-pre.1"
failure = "0.1.5"
hex = "0.3.2"
hmac = "0.7.0"
log = "0.4.6"
multibase = "0.6.0"
serde = "1.0.87"
serde_bytes = "0.10.4"
serde_derive = "1.0.87"
sha2 = "0.8.0"