[package]
name = "morpheus_storage"
version = "0.0.1-alpha1"
authors = ["Rache Bartmoss <bartmoss@tutanota.com>"]
edition = "2018"

[dependencies]
failure = "*"
log = "*"
multibase = "0.6.0"
rmp-serde = "*"
rmpv = { version="*", features=["with-serde"] }
serde = "*"
serde_derive = "*"

# rmp = "*"
# rmp-serde = { version="*", git = "https://github.com/3Hren/msgpack-rust" }