[package]
name = "morpheus_storage"
version = "0.0.1-alpha1"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>"]
edition = "2018"

[dependencies]
failure = "*"
log = "*"
morpheus_keyvault = { path = "../morpheus_keyvault" }
multibase = "0.6.0"
rmp-serde = "*"
rmpv = { version="*", features=["with-serde"] }
serde = "*"
serde_bytes = "*"
serde_derive = "*"
serde_json = "*"

# rmp = "*"
# rmp-serde = { version="*", git = "https://github.com/3Hren/msgpack-rust" }