[package]
name = "morpheus_storage"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>"]
edition = "2018"

[dependencies]
enum-repr = "0.2.3"
failure = "*"
log = "*"
morpheus_keyvault = { path = "../morpheus_keyvault" }
multibase = "0.6.0"
prometheus = { path="../prometheus" }
rmp-serde = "*"
rmpv = { version="*", features=["with-serde"] }
serde = "*"
serde_bytes = "*"
serde_derive = "*"
serde_json = "*"

# rmp = "*"
# rmp-serde = { version="*", git = "https://github.com/3Hren/msgpack-rust" }