[package]
name = "prometheus-cli"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>"]
edition = "2018"

[dependencies]
claims = { path="../claims" }
did = { path="../did" }
failure = "*"
keyvault = { path="../keyvault" }
log = "*"
log4rs = "*"
osg-rpc-storage = { path="../osg-rpc-storage" }
prometheus = { path="../prometheus" }
serde = "*"
serde_derive = "*"
serde_json = "*"
structopt = "*"
