[package]
name = "prometheus-cli"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.17"
claims = { path="../claims" }
did = { path="../did" }
failure = "*"
keyvault = { path="../keyvault" }
log = "*"
log4rs = "*"
prometheus = { path="../prometheus" }
serde = "*"
serde_derive = "*"
serde_json = "*"
structopt = "*"
tokio = { version="0.2.0-alpha.6", features=["rt-current-thread"] }