[package]
name = "prometheus-tester"
version = "0.0.1-alpha1"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Wigy <wigy_opensource_developer@yahoo.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/internet-of-people/prometheus"
keywords = ["iop", "mercury", "morpheus", "prometheus", "test", "tool"]
edition = "2018"

[dependencies]
did = { path="../did" }
failure = "*"
futures = "0.1"
log = "*"
keyvault = { path="../keyvault" }
osg-rpc-storage = { path="../osg-rpc-storage" }
rand_xorshift = { version="0.1.1", features=["serde1"] }
rand = "0.6.5"
serde = "*"
serde_derive = "*"
serde_json = "*"
dirs = "*"
log4rs = "*"
structopt = "*"
