[package]
name = "prometheus"
version = "0.1.0"
authors = ["Rache Bartmoss <bartmoss@tutanota.com>"]
edition = "2018"

[dependencies]
actix = "*"
actix-rt = ""
actix-cors = "*"
actix-http = { version = "*", features = ["rust-tls"] }
actix-server = "0.6" # Concrete version to fix currently conflicting includes from other actix components from latest versions from crates.io
actix-web = "*"
actix-web-actors = "*"
base64 = "*"
blockies = "*"
bytes = "*"
claims = { path="../claims" }
did = { path="../did" }
failure = "*"
futures = "0.1"
mercury-home-protocol = { path="../home-protocol" }
keyvault = { path="../keyvault" }
log = "*"
log4rs = "*"
multiaddr = "*"
multibase = "*"
osg-rpc-storage = { path="../osg-rpc-storage" }
rand = "*"
rand_chacha = "*"
regex = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
structopt = "*"
tokio = "0.1"
tokio-current-thread = "0.1"

[dev-dependencies]
tempfile = "*"