[package]
name = "prometheus"
version = "0.1.0"
authors = ["Rache Bartmoss <bartmoss@tutanota.com>"]
edition = "2018"

[dependencies]
actix = "*"
actix-rt = "0.2"
actix-cors = "*"
actix-http = { version = "*", features = ["rust-tls"] }
# TODO use latest actix
actix-server = "0.6"
actix-web = "*"
actix-web-actors = "*"
base64 = "*"
blockies = "*"
bytes = "0.4"
claims = { path="../claims" }
did = { path="../did" }
failure = "*"
futures = "0.1"
mercury-home-protocol = { path="../home-protocol" }
keyvault = { path="../keyvault" }
log = "*"
log4rs = "*"
multiaddr = "*"
multibase = "*"
rand = "*"
rand_chacha = "*"
regex = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
structopt = "*"
tokio = "1.8"
tokio-current-thread = "0.1"

[dev-dependencies]
tempfile = "*"