[package]
name = "prometheusd"
version = "0.1.0"
authors = ["Rache Bartmoss <bartmoss@tutanota.com>"]
edition = "2018"

[dependencies]
actix-cors = "*"
actix-web = "*"
claims = { path="../claims" }
did = { path="../did" }
failure = "*"
keyvault = { path="../keyvault" }
log = "*"
log4rs = "*"
osg-rpc-storage = { path="../osg-rpc-storage" }
structopt = "*"
