[package]
name = "prometheusd"
version = "0.1.0"
authors = ["Rache Bartmoss <bartmoss@tutanota.com>"]
edition = "2018"

[dependencies]
actix-rt = "*"
actix-cors = "*"
actix-server = "*"
actix-web = "*"
base64 = "*"
blockies = "*"
claims = { path="../claims" }
did = { path="../did" }
failure = "*"
futures = "*"
keyvault = { path="../keyvault" }
log = "*"
log4rs = "*"
names = "*"
osg-rpc-storage = { path="../osg-rpc-storage" }
regex = "*"
serde = "*"
serde_derive = "*"
structopt = "*"
tokio = "*"
