[package]
name = "mercury-storage"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>"]
repository = "https://github.com/Internet-of-People/mercury-rust"
keywords = ["crypto", "wallet", "iop", "mercury", "morpheus", "prometheus", "vault", "key-vault"]
license = "LGPL-3.0+"
edition = "2018"

[dependencies]
#bip_dht = { git = "https://github.com/GGist/bip-rs" }
#bip_handshake = { git = "https://github.com/GGist/bip-rs" }
#bip_magnet = { git = "https://github.com/GGist/bip-rs" }
#bip_util = { git = "https://github.com/GGist/bip-rs" }
futures = "0.1"
futures-state-stream = "0.2"
ipfs-api = "0.4.0-alpha"
multibase = "0.6"
multihash = "*"
multiaddr = "*"
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = "*"
tokio-core = "0.1"
tokio-postgres = "0.3"
tokio-fs = "0.1"
tokio-threadpool = "0.1"
tokio-io = "*"
tokio-timer = "*"
log = "*"
byteorder = "*"
arrayref = "*"
mercury-home-protocol = { path="../home-protocol" }
# multicodec = { git = "https://github.com/mudlee/rust-multicodec" }