[package]
name = "mercury-storage"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>"]
repository = "https://github.com/Internet-of-People/mercury-rust"
keywords = ["crypto", "wallet", "iop", "mercury", "morpheus", "prometheus", "vault", "key-vault"]
license = "LGPL-3.0+"
edition = "2018"

[dependencies]
async-trait = "0.1.17"
arrayref = "=0.3.5"
byteorder = "=1.3.2"
failure = "=0.1.6"
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await", "compat"] }
futures01 = { package = "futures", version = "0.1" }
log = "=0.4.8"
multibase = "=0.6.0"
multihash = "=0.8.0"
multiaddr = "=0.3.1"
serde = "=1.0.102"
serde_derive = "=1.0.102"
serde_json = "=1.0.41"
tokio = "=0.2.0-alpha.6"
tokio-io = "=0.2.0-alpha.6"
