[package]
name = "mercury-storage"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>"]
repository = "https://github.com/Internet-of-People/mercury-rust"
keywords = ["crypto", "wallet", "iop", "mercury", "morpheus", "prometheus", "vault", "key-vault"]
license = "LGPL-3.0+"
edition = "2018"

[dependencies]
arrayref = "*"
byteorder = "*"
failure = "*"
futures = "0.1"
futures-state-stream = "0.2"
log = "*"
mercury-home-protocol = { path="../home-protocol" }
multibase = "0.6"
multihash = "*"
multiaddr = "*"
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = "1.8"
tokio-current-thread = "0.1"