[package]
name = "mercury-test"
version = "0.1.0"
authors = ["Rache Bartmoss <bartmoss@tutanota.com>"]

[dependencies]
capnp = "0.8"
capnp-rpc = "0.8"
futures = "0.1"
mercury-home-protocol = { path="../home-protocol" }
mercury-connect = { path="../connect" }
mercury-home-node = { path="../home-node" }
multiaddr = "*"
multihash = "*"
tokio-core = "0.1"

tokio-io = "*"
