[package]
name = "mercury-test"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>"]
repository = "https://github.com/Internet-of-People/mercury-rust"
keywords = ["crypto", "wallet", "iop", "mercury", "morpheus", "prometheus", "vault", "key-vault"]
license = "LGPL-3.0+"
edition = "2018"

[dependencies]
base64 = "0.9.0"
capnp = "*"
capnp-rpc = "*"
ed25519-dalek = "1.0.0-pre.1"
futures = "0.1"
memsocket = "*"
mercury-home-protocol = { path="../home-protocol" }
mercury-connect = { path="../connect" }
mercury-home-node = { path="../home-node" }
mercury-storage= { path="../storage" }
multiaddr = "*"
multihash = "*"
rand = "*"
sha2 = "*"
tokio-core = "0.1"
tokio-io = "*"
tokio-stdin-stdout = "0.1.1"
tokio-threadpool = "*"