[package]
name = "the_button"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Deusz <lovaszoltanr@gmail.com>"]
repository = "https://github.com/Internet-of-People/mercury-rust"
keywords = ["crypto", "wallet", "iop", "mercury", "morpheus", "prometheus", "vault", "key-vault"]
license = "LGPL-3.0+"
edition = "2018"

[dependencies]
claims = { path="../../claims" }
did = { path="../../did" }
failure = "*"
futures = "0.1"
log = "*"
log4rs = "*"
mercury-home-protocol = { path="../../home-protocol" }
multiaddr = "*"
multibase = "*"
osg-rpc-storage = { path="../../osg-rpc-storage" }
prometheus = { path="../../prometheus" }
structopt = "*"
tempdir = "*"
tokio-signal = "*"
tokio-core = "*"
tokio-uds = "*"
