[package]
name = "the_button"
version = "0.1.0"
authors = ["IoP Ventures LLC <info@iop-ventures.com>", "Rache Bartmoss <bartmoss@tutanota.com>"]
repository = "https://github.com/Internet-of-People/mercury-rust"
keywords = ["crypto", "wallet", "iop", "mercury", "morpheus", "prometheus", "vault", "key-vault"]
license = "LGPL-3.0+"
edition = "2018"

[dependencies]
claims = { path="../../claims" }
did = { path="../../did" }
failure = "*"
futures-preview = { version="0.3.0-alpha.19", features=["compat", "async-await"] }
log = "*"
log4rs = "*"
mercury-home-protocol = { path="../../home-protocol" }
multiaddr = "*"
multibase = "*"
prometheus = { path="../../prometheus" }
structopt = "*"
tempdir = "*"
tokio = { version="0.2.0-alpha.6", features=["rt-current-thread"] }
tokio-async-await = "0.1"
tokio-net = { version="0.2.0-alpha.6", features=["signal"] }
